examples/test/testpolicy14349.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14349
  namespace: namespace333
spec:
  podSelector:
    matchLabels:
      key32: value44
      key17: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value32
          key35: value18
          key18: value25
      podSelector:
        matchLabels:
          key35: value2
          key18: value21
          key1: value41
